# scpi-utils

./: CMakeLists.txt  readme.md
.github/workflows/: pr.yml  release.yml
apps/scpi-service/: CMakeLists.txt
apps/scpi-service/src/: main.cpp
apps/scpi-smoke/: CMakeLists.txt
apps/scpi-smoke/src/: main.cpp
apps/scpi-util/: CMakeLists.txt
apps/scpi-util/src/: main.cpp
cmake/: scpi-deviceConfig.cmake.in
dbus/: scpi-service.xml
libs/scpi-device/: CMakeLists.txt
libs/scpi-device/doc/: readme.md
libs/scpi-device/inc/scpi_device/: scpi_device.h
libs/scpi-device/src/: scpi_device.cpp
libs/scpi-device/tests/: scpi_device_test.cpp
pkgconfig/: scpi-device.pc.in
